--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards"></a></li>
                 </ul>
             </div>
         </nav>
@@ -163,14 +163,14 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Cross Browser Testing & Debugging
                         </li>
-                        <li>
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
